# easy-auth-kv-service

./: .gitignore  README.md  docker-compose.yml
auth-cpp/: CMakeLists.txt  Dockerfile  README.md
auth-cpp/src/: main.cpp
kv-py/: Dockerfile  main.py
